# gpucheck

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/experts/: README.md
.claude/experts/api-design-dx-lead/: AGENT.md
.claude/experts/cicd-release-engineer/: AGENT.md
.claude/experts/cuda-systems-engineer/: AGENT.md
.claude/experts/docs-developer-advocate/: AGENT.md
.claude/experts/fuzzing-property-testing-lead/: AGENT.md
.claude/experts/numerical-analysis-specialist/: AGENT.md
.claude/experts/performance-engineer/: AGENT.md
.claude/experts/pytest-plugin-architect/: AGENT.md
.claude/experts/security-safety-specialist/: AGENT.md
.claude/experts/triton-compiler-specialist/: AGENT.md
.github/workflows/: ci.yml
.hypothesis/constants/: 0b79633f093d3600  1925b17b4750e62b  21bfd168cb18de78  28d04eb5edb88fb6  305c8ec1b483896f  372f5a9c959f7198  3819a0bd0fb4a2c2  387f794610233a5c  3b0c38fd12f35fbb  418924ef6f8f4861  41f3d0f4aa94b36b  41f6a384cf484527  469695e32b973221  4f200723cb70e065  5337b887fea17eab  5cb9260d0fc256eb  6109844e490c8636  6db80c4704950f3c  6f28751bf7b11128  766d254fb6f89a03  7ab2a745e2854750  7b94935d7003d0ac  7d296a8eb0a43636  9395ff80cde7c9e0  9dff4832a7838d11  aaa43d7ed5985153  b83ad0dc1ebe3c09  c20f60b6d660b369  c554dff68943b8df  c5c79c7bd6993086  d8227691479d195e  dcec2c2ae3d5e10e  e0c0121d38f24fd7  e297c228dd5f78f8  fcff9daf906d2d76  fe206d8c365551ab
examples/: basic_kernel_test.py  benchmark_example.py  shape_fuzzing_example.py  triton_layernorm_bug.py  triton_matmul_bug.py  triton_matmul_test.py
src/gpucheck/: __init__.py  plugin.py
src/gpucheck/analysis/: __init__.py  bottleneck.py  regression.py  roofline.py
src/gpucheck/arch/: __init__.py  compatibility.py  detection.py  tensor_cores.py
src/gpucheck/assertions/: __init__.py  close.py  reporting.py  tolerances.py
src/gpucheck/decorators/: __init__.py  devices.py  dtypes.py  parametrize.py  shapes.py
src/gpucheck/fixtures/: __init__.py  benchmark.py  gpu.py  profiler.py
src/gpucheck/fuzzing/: __init__.py  inputs.py  shapes.py  strategies.py
src/gpucheck/reporting/: __init__.py  ci.py  console.py  json.py
tests/: conftest.py  test_analysis.py  test_arch.py  test_assertions.py  test_ci.py  test_decorator_combinations.py  test_decorators.py  test_fuzzing.py
tests/gpu_integration/: conftest.py  test_arch_detection_gtx1650.py  test_benchmark_accuracy.py  test_benchmark_deep_analysis.py  test_decorators_e2e.py
(+3 files in other folders)
