[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpucheck"
version = "0.1.0"
description = "pytest for GPU kernels — correctness, benchmarking, and fuzzing for CUDA and Triton"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Akash", email = "drakathakash@gmail.com" },
]
keywords = ["gpu", "cuda", "triton", "testing", "pytest", "kernel", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytest>=7.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
cupy = ["cupy-cuda12x>=13.0"]
triton = ["triton>=3.0"]
hypothesis = ["hypothesis>=6.0", "hypothesis[numpy]"]
all = ["gpucheck[torch,hypothesis]"]
dev = [
    "gpucheck[all]",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.entry-points.pytest11]
gpucheck = "gpucheck.plugin"

[project.urls]
Homepage = "https://github.com/Akasxh/gpucheck"
Repository = "https://github.com/Akasxh/gpucheck"
Issues = "https://github.com/Akasxh/gpucheck/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gpucheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/gpu_integration"
markers = [
    "gpu: marks tests requiring a GPU",
    "slow: marks slow-running tests",
    "multi_gpu: marks tests requiring multiple GPUs",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["tests/gpu_integration"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pynvml", "pynvml.*", "torch", "torch.*", "triton", "triton.*", "cupy", "cupy.*", "hypothesis", "hypothesis.*"]
ignore_missing_imports = true
